--- a/style.css
+++ b/style.css
@@ -1,103 +1,128 @@
-.main-container {
-    display: flex;
-    flex-wrap: wrap;
-  }
-  
-  .section {
-    width: 50%;
-  }
-.section-item a {
-    color: #829985;
-    text-decoration: none;  
-    transition: color 0.5s;
-  }
-  .section-item a:hover {
-    color: #4d2323;
-  }
-.nav-link {
-    transition: .3s;
-  }
-.nav-link {
-    padding: 0 20px;
-    line-height: 50px;
-  }
-.nav-list {
-    list-style: none;
-  }
-html {
-    scroll-behavior: smooth; 
-  }
-.container {
-    max-width: 1440px;
-    margin: 0 auto;
-  }
-.nav-list {
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-  }
 * {
-    box-sizing: border-box;
-  }
-@font-face {
-    font-family: Roboto;
-     src: url("assets/fonts/Roboto.ttf");
-   }
-   @font-face {
-    font-family: 'Roboto';
-    src: url("assets/fonts/RobotoThin.ttf");
-    font-weight: 100;
-  }
-  @font-face {
-    font-family: 'Roboto';
-    src: url("assets/fonts/RobotoRegular.ttf");
-    font-weight: 300;
-    border: 1px solid red;
-    @media (max-width: 768px) {
-        .section {
-          width: 100%;
-        }
-      }
-    
-    
-  }
-body{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    min-height: 100vh;
-    margin: 0; padding: 0;
-    font-family: 'Roboto';
-    
+  padding: 0;
+  margin: 0;
+}
 
-    font-family: 'Roboto', sans-serif;
+ul {
+  list-style-type: none;
+}
 
+h1, h2, h3, h5, h6 {
+  color:darkolivegreen
+}
 
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-    
-    font-family: 'Roboto', sans-serif;
-    font-weight:100
+a {
+  background: linear-gradient(to botom, #b3801225 0%, #b3801225 100%);
+  background-position: 0 100%;
+  background-repeat: repeat-x;
+background-size: 3px 3px;
+color:rgb(53, 145,182);
+text-decoration: none;
+text-transform: uppercase;
+}
 
-    header class = "header"
-    header class = "main-header"
-    header class = "footer-header"
+a:hover {
+  background-image: url(F:\Downloads);
+  background-position: 0 100%;
+  background-size: auto 6px;
+  background-repeat: repeat-x;
+  color: blueviolet;
+  text-decoration: none;
+}
 
-    nav class="nav"
-  ul class="nav-list"
-    li class="nav-item"a href="#contacts" class="nav-link"Contacts/a/li
-    li class="nav-item"a href="#summary" class="nav-link"Summary/a/li
-    li class="nav-item"a href="#skills" class="nav-link"Skills/a/li
-  /ul
-/nav
-section class="section" id="profile"
-         
-/section
+body {
+  background-color: wheat;
+  font-family: 'Courier New', Courier, monospace;
+}
 
+.container {
+  width: 960px;
+  margin: 32px auto;
+  background: linear-gradient(to bottom,white, rgba(52, 129, 231, 0.8));
+  box-shadow: rgba(36, 74, 125, 0.8),0px 2px 1px -1px,  rgba(red, green, blue, alpha),0px 1px 1px 0px, rgba(rgb(68, 55, 55), rgb(114, 15, 15), rgb(198, 205, 182), alpha), 0px 1px 3px 0px; 
+}
 
+.container:hover{
+  box-shadow: 2px 4px 3px rgba(36, 74, 125, 0.8),0px 1px 1px 0px rgba(red, green, blue, alpha), 0px 1px 3px 0px, rgba(rgb(68, 55, 55), rgb(114, 15, 15), rgb(198, 205, 182), alpha);
+}
+
+.header {
+  display: flex;
+}
+
+.header > .right.side> .navbar >.navbar-links {
+  display: flex;
+  justify-content: space-between;
+}
+
+.header > .right.side > {
+  display: flex;
+flex-direction: column;
+justify-content: space-between;
+}
+
+.header h1 {
+  font-size: 72px;
+}
+
+.header > .right.side {
+  padding: 16px;
+}
+
+.main {
+  border-top: 1px solid #211a2a;
+  display: flex;
+}
+
+.main .sidebar {
+  flex: 0 0 auto;
+  width: 250px;
+  background-color: #211a2a;
+  color: white;
+}
+
+.main > .sidebar h2{
+color: #96ab5d
+}
+
+.main > .sidebar a {
+  color:beige
+}
+
+.section {
+  margin: 16px;
+  width: 90%;
+}
+
+.section > ul >li {
+  margin: 4px 0px 4px 8px;
+}
+
+.main > .content{
+  display:flex;
+  flex-direction: column;
+}
+
+.footer{
+  width:100%;
+  padding: 16px 0;
+  display:flex;
+  justify-content: space-around;
+  align-items: center;
+  flex:auto;
+  border-top: 1px solid #211a2a;
+}
+
+.footer a {
+  color:black
+}
+
+pre{
+  margin: 8px 0;
+  background-color: #96ab5d;
+  border: 1px solid white;
+}
       
     
     
    
-}
